<resources>
    <string name="app_name">Lock Box</string>
    <string name="page_payment">ชำระค่าบริการ</string>
    <string name="time_left">เหลือเวลา</string>
    <string name="time_left_min">นาที</string>
    <string name="consent_title">การแจ้งเตือนเกี่ยวกับข้อมูลส่วนบุคคล</string>
    <string name="lockbox_comp">LOCK BOX COMPANY GROUP</string>
    <string name="cancel">ยกเลิก</string>
    <string name="accept">ตกลง</string>
    <string name="finger_scan_page_title">สแกนลายนิ้วมือ สำหรับเปิดล็อกเกอร์</string>
    <string name="scan_hint_1">กรุณาวางนิ้วของคุณที่เครื่องสแกน</string>
    <string name="scan_hint_2">ระบบจะทำการสแกนนิ้วมือของคุณทั้งหมด 5 ครั้ง</string>
    <string name="locker_page_title">ตู้ฝากของ</string>
    <string name="locker_in">ฝากของ</string>
    <string name="locker_out">นำของออก</string>
    <string name="back_to_main_page">กลับหน้าแรก</string>
    <string name="locker_password">ระบุรหัสผ่านเพื่อเปิดล็อกเกอร์</string>
    <string name="password_hint">กรุณาระบุรหัสผ่าน 6 หลัก ครั้งที่ 1</string>
    <string name="menu_1">ตู้ฝากของ</string>
    <string name="menu_2">รับส่งพัสดุ</string>
    <string name="menu_3">การจอง</string>
    <string name="menu_4">เติมเงิน</string>
    <string name="motto">ตู้เหลืองล็อคบอกซ์ ส่งง่าย รับได้ชัวร์ ให้เรื่องพัสดุจัดการได้ 24 ชั่วโมง</string>
    <string name="otp_title">ยืนยันเบอร์โทรศัพท์ด้วยรหัส OTP</string>
    <string name="resend_otp">ส่งรหัส OTP อีกครั้ง</string>
    <string name="payment_method_title">กรุณาเลือกวิธีการชำระเงินของท่าน</string>
    <string name="total_payment">รวมเป็นเงินที่ต้องชำระ</string>
    <string name="payment_desc">นโยบายการขอเงินคืน\n 1. บริษัทฯ ขอสงวนสิทธิ์ในการคืนเงิน สำหรับการชำระค่าบริการด้วยบัตรเครดิดทุกกรณี\n 2. รายการที่มีขอทำเงินคืนไม่สามารถโอนหรือเปลี่ยนหรือแลกเป็นเงินสดได้\n 3. บริษัทฯ ขอสงวนสิทธิ์ในการเปลี่ยนแปลงเงื่อนไขใดๆ โดยไม่จำต้องแจ้งให้ทราบล่วงหน้า</string>
    <string name="promo_code_hint">กรอกรหัสโปรโมชั่น</string>
    <string name="promo_coode">รหัสโปรโมชั่น</string>
    <string name="payment_success">ทำรายการสำเร็จ!</string>
    <string name="locker_open">ล็อกเกอร์ที่คุณเลือกเปิดแล้ว!</string>
    <string name="contact_staff">กรณีตู้ล็อกเกอร์ไม่เปิด กรุณาติดต่อเจ้าหน้าที่</string>
    <string name="recieve_detail">ระบุข้อมูลการรับ</string>
    <string name="add_new">เพิ่มข้อมูลผู้รับใหม่</string>
    <string name="pudo_page_title">รับส่งพัสดุ</string>
    <string name="pudo_page_recieve">รับพัสดุ</string>
    <string name="pudo_page_send">ส่งพัสดุ</string>
    <string name="sender">ส่งพัสดุ</string>
    <string name="receiver">รับพัสดุ</string>
    <string name="staff">พนักงานขนส่งพัสดุ</string>
    <string name="add_bank_account">เพิ่มหมายเลขบัญชีธนาคารใหม่</string>
    <string name="bank">ธนาคาร</string>
    <string name="select_bank">เลือกธนาคาร</string>
    <string name="account_code">หมายเลขบัญชีธนาคาร</string>
    <string name="account_name">ชื่อบัญชีธนาคาร</string>
    <string name="add_receiver">เพิ่มข้อมูลผู้รับใหม่</string>
    <string name="name">ชื่อ</string>
    <string name="surname">นามสกุล</string>
    <string name="phone_number">เบอร์โทรศัพท์</string>
    <string name="addr_detail">รายละเอียดที่อยู่</string>
    <string name="province">จังหวัด</string>
    <string name="sub_dist">แขวง/ตำบล</string>
    <string name="dist">เขต/อำเภอ</string>
    <string name="postcode">รหัสไปรษณีย์</string>
    <string name="identity">ยืนยันตัวตน</string>
    <string name="identity_hint">กรุณายืนยันตัวตนโดยการ\nเสียบบัตรประชาชนของท่านไปยังเครื่องอ่านบัตร</string>
    <string name="identity_hint_success">ยืนยันตัวตนสำเร็จ\nกรุณานำบัตรประชาชนของท่านออกจากเครื่องอ่านบัตร</string>
    <string name="receive_item">รับของ</string>
    <string name="send_item">ส่งของ</string>
    <string name="parcel_detail">ระบุข้อมูลพัสดุ</string>
    <string name="parcel_type">ประเภทพัสดุ</string>
    <string name="parcel_size">ขนาดพัสดุ</string>
    <string name="parcel_w">น้ำหนักพัสดุ (สูงสุด 25 กิโลกรัม)</string>
    <string name="parcel_w2">น้ำหนักพัสดุ</string>
    <string name="w">ความกว้าง (ซม.)</string>
    <string name="l">ความยาว (ซม.)</string>
    <string name="w2">ความกว้าง</string>
    <string name="l2">ความยาว</string>
    <string name="h">ความสูง (ซม.)</string>
    <string name="h2">ความสูง</string>
    <string name="have_cod">บริการเรียกเก็บเงินปลายทาง</string>
    <string name="cod_bank_code">หมายเลขบัญชีธนาคาร</string>
    <string name="cod_amt1">ยอดเรียกเก็บปลายทาง (THB)</string>
    <string name="cod_amt">ยอดเรียกเก็บเงินปลายทาง</string>
    <string name="parcel_w_send">รายการพัสดุรอนำส่ง</string>
    <string name="w_sent">พัสดุรอนำส่ง</string>
    <string name="w_send_item">รายการ</string>
    <string name="r_point">เลือกจุดรับพัสดุ</string>
    <string name="endpoint">สถานที่ปลายทาง</string>
    <string name="locker">Locker</string>
    <string name="locker_pudo">ส่งที่ Locker</string>
    <string name="any_home_pudo">ส่งที่บ้าน</string>
    <string name="any_home">Anywhere/Home</string>
    <string name="put_loocker">นำพัสดุใส่ตู้ล็อกเกอร์</string>
    <string name="put_loocker2">นำของใส่ตู้ล็อกเกอร์</string>
    <string name="get_locker_no">คุณได้ตู้ล็อกเกอร์หมายเลข</string>
    <string name="comfirm_r">ยืนยันการส่งของ</string>
    <string name="change_locker">ขอเปลี่ยนขนาดตู้</string>
    <string name="cancel_pudo">ยกเลิกการส่งของ</string>
    <string name="parcel_detail2">ข้อมูลพัสดุ</string>
    <string name="create_date">วันที่ทำรายการ</string>
    <string name="order_no">หมายเลขคำสั่งซื้อ</string>
    <string name="print_pudo">พิมพ์ใบปะหน้าพัสดุ</string>
    <string name="cod">ค่าสินค้าชำระปลายทาง (COD)</string>
    <string name="bath">บาท</string>
    <string name="drop_off">ต้นทาง</string>
    <string name="pick_up">ปลายทาง</string>
    <string name="category_of_parcel">ประเภทพัสดุ</string>
    <string name="parcel_size2">ขนาดพัสดุ</string>
    <string name="parcel_weight">น้ำหนักพัสดุ</string>
    <string name="shipment">การจัดส่งสินค้า</string>
    <string name="payment_method">วิธีการชำระเงิน</string>
    <string name="sender2">ผู้ส่ง</string>
    <string name="receiver2">ผู้รับ</string>
    <string name="send_now">ส่งพัสดุทันที</string>
    <string name="send">ส่งพัสดุ</string>
    <string name="send2">(กรณีจองผ่านแอพพลีเคชั่น)</string>
    <string name="extra_pay">ต้องชำระเพิ่ม</string>
    <string name="usage_summary">สรุปการใช้งาน</string>
    <string name="usage_summary_hint">เราจะแจ้งยอดค่าใช้จ่ายอีกครั้งเมื่อท่านนำสัมภาระออกจากตู้ล็อคเกอร์เรียบร้อย</string>
    <string name="back">ย้อนกลับ</string>
    <string name="qr_or_pin">สแกน Qr Code หรือ ระบุรหัส</string>
    <string name="qr">QR CODE</string>
    <string name="pin">ระบุรหัส</string>
    <string name="p_sender">ผู้ส่ง</string>
    <string name="p_receiver">ผู้รับ</string>
    <string name="service_summary">สรุปค่าบริการที่ต้องชำระ</string>
    <string name="total_payment2">ค่าบริการทั้งหมด</string>
    <string name="after_dis">ยอดที่ต้องชำระหลังหักส่วนลด</string>
    <string name="payment_method2">วิธีการชำระเงิน</string>
    <string name="payment">ชำระค่าบริการ</string>
    <string name="total_pay">ยอดชำระ</string>
    <string name="payment_hint">เราจะแจ้งยอดค่าใช้จ่ายอีกครั้งเมื่อท่านนำสัมภาระออกจากตู้ล็อคเกอร์เรียบร้อย</string>
    <string name="scan_qr_code">สแกน Qr Code</string>
    <string name="qr_code_hint">กรุณาสแกน Qr Code ที่เครื่องสแกน</string>
    <string name="register">ลงทะเบียนเข้าใช้งาน</string>
    <string name="select_country_code">เลือกรหัสประเทศ</string>
    <string name="search_country_code">ค้นหารหัสประเทศ</string>
    <string name="select_bank_account">เลือกบัญชีธนาคาร</string>
    <string name="select_locker">กรุณาเลือกตู้ที่ต้องการฝากของ</string>
    <string name="free">ว่าง</string>
    <string name="used">ถูกใช้แล้ว</string>
    <string name="booked">จองแล้ว</string>
    <string name="reset">รีเซ็ต</string>
    <string name="select_locker_out">เลือกช่องล็อคเกอร์\nที่ต้องการนำของออก</string>
    <string name="select_parcel_size">เลือกขนาดพัสดุ</string>
    <string name="select_parcel_type">เลือกประเภทพัสดุ</string>
    <string name="fee_summary">สรุปค่าบริการ</string>
    <string name="topup">เติมเงิน</string>
    <string name="topup_hint">กรุณาตรวจสอบเบอทรศัพท์มือถือและข้อมูลของคุณให้ถูกต้องก่อนชำระเงิน</string>
    <string name="name_surname">ชื่อ - นามสกุล</string>
    <string name="email">อีเมล</string>
    <string name="minimum_topup">ยอดขั้นต่ำ 100 บาท</string>
    <string name="payable">รวมเป็นเงินที่ต้องชำระ</string>
    <string name="topup_scuccess">เติมเงินสำเร็จ!</string>
    <string name="tupup_success2">ระบบเติมเงินในกระเป๋าของคุณเรียบร้อยแล้ว</string>
    <string name="min_service_desc">*** ค่าบริการขั้นต่ำ 2 ชั่วโมง กรณีใช้งานเกิน 6 ชั่วโมง ระบบจะปรับเป็นแบบรายวันให้อัตโนมัติ ***</string>
    <string name="promo_dist">ส่วนลดโปรโมชั่น</string>
    <string name="paid_amt">ยอดที่ชำระแล้ว</string>
    <string name="excess_amt">ค่าบริการส่วนเกิน</string>
    <string name="understand">เข้าใจแล้ว</string>
    <string name="cancel_delivery">ต้องการยกเลิกการส่งของใช่หรือไม่?</string>
    <string name="cancel_delivery_hint">ยกเลิกการส่งของในกรณีนี้ต้องรอการตรวจสอบจากเจ้าหน้าที่ถึงสาเหตุ และสถานะตู้ ค่าบริการของคุณจะถูก Refund คืน หลังจากได้รับการยืนยันแล้ว</string>
    <string name="confirm">ยืนยัน</string>
    <string name="already_cancel">รายการนี้ถูกขอยกเลิกเรียบร้อยแล้ว</string>
    <string name="already_cancel2">โปรดรอการตรวจสอบและติดต่อกลับจากเจ้าหน้าที่อีกครั้ง</string>
    <string name="confirm_receive">ยืนยันการรับพัสดุ?</string>
    <string name="refuse">ปฎิเสธ</string>
    <string name="crash_hint">ขออภัย ไม่มีตู้ที่สามารถรองรับการส่งของ ของคุณได้ในขณะนี้ เนื่องจากมีผู้ใช้เป็นจำนวนมาก</string>
    <string name="crash_hint2">ท่านสามารถกดขอคืนเงินสำหรับการบริการส่งพัสดุครั้งนี้ได้ทันที</string>
    <string name="refund">ขอคืนเงิน</string>
    <string name="company_apologizes">ทางบริษัทฯ ต้องขออภัยกับความไม่สะดวกที่เกิดขึ้น หากต้องการสอบถามข้อมูลเพิ่มเติม กรุณาติดต่อ (+66)2-821-6559</string>
    <string name="confirm_register">คุณต้องการเป็นสมาชิกกับเรา?</string>
    <string name="confirm_register2">หากต้องการทำรายการต่อ กรุณายืนยันเบอร์โทรศัพท์ด้วยรหัส OTP?</string>
    <string name="confirm_register_">คุณยังไม่ได้เป็นสมาชิกของเราใช่หรือไม่??</string>
    <string name="confirm_register_2">หากต้องการทำรายการต่อ กรุณายืนยันเบอร์โทรศัพท์ด้วยรหัส OTP?</string>
    <string name="invalid_pin">รหัสของท่านไม่ถูกต้อง กรุณาใส่รหัสใหม่อีกครั้ง</string>
    <string name="invalid_qr_code">ข้อมูล Qr Code ไม่ถูกต้อง</string>
    <string name="failed_payment">ชำระค่าบริการไม่สำเร็จ</string>
    <string name="failed_payment2">คุณทำรายการเกินระยะเวลากำหนด\nกรุณาทำรายการใหม่อีกครั้ง</string>
    <string name="close_locker_message">รับพัสดุ และปิดตู้เดิมให้เรียบร้อย</string>
    <string name="open_not_success">ขออภัย ไม่สามารถเปิดตู้ได้ในขณะนี้</string>
    <string name="open_not_success2">เนื่องจากไม่มีตู้ว่าง ระบบจะรอนำจ่ายถัดไป</string>
    <string name="pay_success">ชำระเงินสำเร็จ!</string>
    <string name="scan_qr_open">สแกน QR CODE เพื่อเปิดตู้</string>
    <string name="invalid_phone_number">กรุณาระบุเบอร์โทรศัพท์ของคุณให้ถูกต้อง</string>
    <string name="force_register">คุณยังไม่ได้เป็นสมาชิกของเราบน Application</string>
    <string name="force_register2">หากต้องการทำรายการ กรุณาสมัครสมาชิกบน Application Lockbox</string>
    <string name="require_identity">กรุณายืนยันตัวตนหรือเปิดการใช้งานบน Application Lockbox เพื่อรับสิทธิพิเศษและการชำระเงินผ่านระบบ Wallet</string>
    <string name="hour">ชั่วโมง</string>
    <string name="fee_p_h">ค่าบริการต่อชั่วโมง</string>
    <string name="fee_over">เวลาใช้งานส่วนเกิน</string>
    <string name="minimum_fee">ค่าบริการขั้นต่ำ</string>
    <string name="new_locker">ขอตู้ใหม่</string>
    <string name="new_locker_2">กรุณาเลือกขนาดตู้ใหม่</string>
    <string name="new_same_size">ขอตู้ขนาดเดิม</string>
    <string name="new_bigger_size">ขอตู้ขนาดใหญ่ขึ้น</string>
</resources>