<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/yellow"
        android:padding="9dp"
        android:src="@drawable/ic_lockbox_new" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_register_"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/confirm_register_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_cancel"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_item_purple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/confirm"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>