<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:src="@drawable/ic_warning_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel_delivery"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cancel_delivery_hint"
        android:textAlignment="center"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_item_purple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/confirm"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_cancel"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close"
                android:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>