<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceFeeSummaryActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_red" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/new_locker"
                android:textColor="@color/purple"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_red" />

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="4dp"
            android:background="@drawable/card_item_no_radius_transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/time_left"
                android:textColor="@color/purple" />

            <TextView
                android:id="@+id/tvCountdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="00:00"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/time_left_min"
                android:textColor="@color/purple" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="170dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/card_item_white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/new_locker_2"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btnSame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/card_item_white_border_gray_radius_16"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:tag="Same">

                    <TextView
                        android:id="@+id/tvSame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_same_size"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btnBig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/card_item_white_border_gray_radius_16"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:tag="Big">

                    <TextView
                        android:id="@+id/tvBig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_bigger_size"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat

                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/card_item_red"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnConfirm"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/card_item_purple"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/accept"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>

